<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/menubg"
    tools:context=".ActivityMenu">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:weightSum="4"

        >


        <com.google.android.material.button.MaterialButton
            android:id="@+id/slowNormalMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="300dp"
            android:minHeight="80dp"
            android:layout_marginBottom="30dp"
            android:text="@string/normal_slow_mode"
            android:backgroundTint="@color/main_text_color"
            android:textSize="25sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/fastNormalMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginBottom="30dp"

            android:minWidth="300dp"
            android:minHeight="80dp"
            android:text="@string/normal_fast_mode"
            android:backgroundTint="@color/main_text_color"
            android:textSize="25sp" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/sensorMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="300dp"
            android:minHeight="80dp"
            android:text="@string/sensor_mode"
            android:backgroundTint="@color/main_text_color"
            android:textSize="25sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/highScores"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:minWidth="300dp"
            android:minHeight="80dp"
            android:text="@string/high_scores"
            android:backgroundTint="@color/main_text_color"
            android:textSize="25sp" />

    </LinearLayout>
</RelativeLayout>