<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/menubg"
    tools:context=".ActivityGame">

    <LinearLayout
        android:id="@+id/gameOver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="70dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:text="@string/game_over"
            android:textColor="#FFE1E1"
            android:textSize="50sp" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/yourScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gameOver"
        android:layout_centerInParent="true"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:text="YOUR SCORE: "
            android:textColor="#FFE1E1"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/scoreValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="########"
            android:textColor="#FFE1E1"
            android:textSize="30sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/enterName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/yourScore"
        android:layout_centerInParent="true"
        android:text="@string/write_your_name_down_below"
        android:textColor="#FFE1E1"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/enterNameLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/enterName"
        android:layout_centerInParent="true"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/nameText"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:inputType="textPersonName" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/enterNameLayout"
        android:layout_centerInParent="true"
        android:layout_marginTop="100dp"
        android:orientation="vertical">


        <com.google.android.material.button.MaterialButton
            android:id="@+id/saveButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/main_text_color"
            android:text="@string/save"
            android:textColor="@color/white" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/backButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/main_text_color"
            android:text="@string/menu"
            android:textColor="@color/white" />

    </LinearLayout>


</RelativeLayout>